# Movie-Recommender

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
notebooks/: genre_eda.ipynb
scripts/: evaluate_model.py  train_model.py  tune_svd.py
src/recommender/: config.py
src/recommender/api/: app.py
src/recommender/data/: loaders.py
src/recommender/evaluation/: metrics.py
src/recommender/models/: algorithms.py  persistence.py  training.py
src/recommender/recommender/: service.py  top_n_recomm.py
tests/: test_loaders.py  test_service.py
